--- a/Nonhomogeneous linear dynamic system.ipynb
+++ b/Nonhomogeneous linear dynamic system.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "### Homogeneous linear dynamic system\n",
     "$$\\dot{x}(t) =\\frac{dx}{dt} = F(t)x(t)$$\n",
-    "solution to homogenos linear dynamic system: \n",
+    "solution to homogeneous linear dynamic system: \n",
     "$$x(t)=\\Phi(t)x(0)$$\n",
     "\n",
     "### Nonhomogeneous linear dynamic system\n",
